--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,22 +11,25 @@
 # templates.
 
 
-# postfix capabilities : list
-#    Active Postfix capabilities. By default Postfix is configured with
-#    local mail disabled, all mail is sent to local MX server configured in DNS.
+# postfix capabilities
+# ~~~~~~~~~~~~~~~~~~~~
+# Active Postfix capabilities. By default Postfix is configured with
+# local mail disabled, all mail is sent to local MX server configured in DNS.
+postfix: [ 'null' ]
 # .. include:: ../docs/parts/defaults/postfix_capabilities.rst
 #    :start-line: 5
-postfix: [ 'null' ]
 
 
-# postfix_relayhost : string
-#    Address of mail host this host should relay all mail to instead of delivering
-#    it directly. (Automatic configuration)
+# postfix_relayhost
+# ~~~~~~~~~~~~~~~~~
+# Address of mail host this host should relay all mail to instead of delivering
+# it directly. (Automatic configuration)
 postfix_relayhost: False
 
 
-# postfix_mailname : string
-#    Mail host name configured in /etc/mailname
+# postfix_mailname
+# ~~~~~~~~~~~~~~~~
+# Mail host name configured in /etc/mailname
 postfix_mailname: '{{ ansible_fqdn }}'
 
 
